# ironhack-ironkaggle-miniproject

./: README.md  flake.nix  notebook.ipynb  notebook.py  plan.md  presentation.html  presentation.md  pyproject.toml  run_analysis.py
